update parsing schema to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,11 +70,12 @@
                             <img src="{{ url_for('display_image', filename=filename) }}" width="150px">
                         </div>
                         <div class="col-7">
-                            {% if pred_knn and pred_svc and pred_nb %}
-                            <label> KNN Model : <b> {{ pred_knn }} </b></label><br>
-                            <label>SVC Model : <b> {{ pred_svc }} </b></label><br>
-                            <label>NB Model : <b> {{ pred_nb }} </b></label>
-                            {% endif %}
+                            <label> KNN Model : <b> {% if pred_knn == 0 %} Ceplok {% else %} Parang {% endif %}
+                                </b></label><br>
+                            <label>SVC Model : <b> {% if pred_svc == 0 %} Ceplok {% else %} Parang {% endif %}
+                                </b></label><br>
+                            <label>NB Model : <b> {% if pred_nb == 0 %} Ceplok {% else %} Parang {% endif %}
+                                </b></label>
                         </div>
                     </div>
                 </div>
